--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,6 +10,7 @@ tasks:
   - name: Install dependencies
     before: |
       sudo apt update -y && sudo apt install -y mosquitto mosquitto-clients libboost-dev libboost-thread-dev libmosquitto-dev rapidjson-dev
+      gp sync-done aptinstall
       pip install -r requirements.txt
       pip install -r requirements-dev.txt
       npm install -g npm@8.10.0
@@ -20,5 +21,7 @@ tasks:
       mosquitto
     openMode: tab-after
   - name: MQTT Subscribe
-    command: mosquitto_sub -t '#' -v
+    command: |
+      gp sync-await aptinstall
+      mosquitto_sub -t '#' -v
     openMode: split-right
